manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "kube1-2e03"
    labels:
        app: "kube1-2e03"
spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "kube1-2e03"
